--- a/.emacs.d/.gitignore
+++ b/.emacs.d/.gitignore
@@ -2,10 +2,10 @@ custom.el
 elpa/
 projectile-bookmarks.eld
 transient
-.save-files
-.cache
-.lsp*
 network-security.data
 bookmarks
 org-roam.db
 request
+
+!.gitignore
+.*
